--- a/ProxyConfigHelper/Helper-Info.plist
+++ b/ProxyConfigHelper/Helper-Info.plist
@@ -14,7 +14,7 @@
 	<string>2</string>
 	<key>SMAuthorizedClients</key>
 	<array>
-		<string>identifier "com.west2online.ClashXR" and anchor apple generic and certificate leaf[subject.CN] = "Apple Distribution: Mark Jerry (8U6T3TBX56)" and certificate 1[field.1.2.840.113635.100.6.2.1] /* exists */</string>
+		<string>anchor apple generic and identifier "com.west2online.ClashXR" and (certificate leaf[field.1.2.840.113635.100.6.1.9] /* exists */ or certificate 1[field.1.2.840.113635.100.6.2.6] /* exists */ and certificate leaf[field.1.2.840.113635.100.6.1.13] /* exists */ and certificate leaf[subject.OU] = "8U6T3TBX56")</string>
 	</array>
 </dict>
 </plist>
