Update meta helper identifier.

--- a/ClashX.xcodeproj/xcshareddata/xcschemes/com.west2online.ClashX.ProxyConfigHelper.xcscheme
+++ b/ClashX.xcodeproj/xcshareddata/xcschemes/com.west2online.ClashX.ProxyConfigHelper.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "F9A7C0682306E874007163C7"
-               BuildableName = "com.west2online.ClashX.ProxyConfigHelper"
-               BlueprintName = "com.west2online.ClashX.ProxyConfigHelper"
+               BuildableName = "com.metacubex.ClashX.ProxyConfigHelper"
+               BlueprintName = "com.metacubex.ClashX.ProxyConfigHelper"
                ReferencedContainer = "container:ClashX.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -46,8 +46,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "F9A7C0682306E874007163C7"
-            BuildableName = "com.west2online.ClashX.ProxyConfigHelper"
-            BlueprintName = "com.west2online.ClashX.ProxyConfigHelper"
+            BuildableName = "com.metacubex.ClashX.ProxyConfigHelper"
+            BlueprintName = "com.metacubex.ClashX.ProxyConfigHelper"
             ReferencedContainer = "container:ClashX.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -63,8 +63,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "F9A7C0682306E874007163C7"
-            BuildableName = "com.west2online.ClashX.ProxyConfigHelper"
-            BlueprintName = "com.west2online.ClashX.ProxyConfigHelper"
+            BuildableName = "com.metacubex.ClashX.ProxyConfigHelper"
+            BlueprintName = "com.metacubex.ClashX.ProxyConfigHelper"
             ReferencedContainer = "container:ClashX.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
