Ignore meta core file.

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ ClashX/Resources/Country.mmdb.gz
 ClashX/Resources/geoip.dat.gz
 ClashX/Resources/geosite.dat.gz
 .bundle/config
+ClashX/Resources/com.metacubex.ClashX.ProxyConfigHelper.meta
