Deleta goClash, Download core form meta release.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ ClashX/Resources/geoip.dat.gz
 ClashX/Resources/geosite.dat.gz
 .bundle/config
 ClashX/Resources/com.metacubex.ClashX.ProxyConfigHelper.meta
+clash.meta
