--- a/ClashX.xcodeproj/xcshareddata/xcschemes/ClashX.xcscheme
+++ b/ClashX.xcodeproj/xcshareddata/xcschemes/ClashX.xcscheme
@@ -16,7 +16,7 @@
                      BuildableIdentifier = "primary"
                      BlueprintIdentifier = "49CF3B1C20CD7463001EBF94"
                      BuildableName = "ClashX.app"
-                     BlueprintName = "ClashX"
+                     BlueprintName = "ClashX Meta"
                      ReferencedContainer = "container:ClashX.xcodeproj">
                   </BuildableReference>
                </EnvironmentBuildable>
@@ -34,7 +34,7 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "49CF3B1C20CD7463001EBF94"
                BuildableName = "ClashX.app"
-               BlueprintName = "ClashX"
+               BlueprintName = "ClashX Meta"
                ReferencedContainer = "container:ClashX.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -50,7 +50,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "49CF3B1C20CD7463001EBF94"
             BuildableName = "ClashX.app"
-            BlueprintName = "ClashX"
+            BlueprintName = "ClashX Meta"
             ReferencedContainer = "container:ClashX.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -73,7 +73,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "49CF3B1C20CD7463001EBF94"
             BuildableName = "ClashX.app"
-            BlueprintName = "ClashX"
+            BlueprintName = "ClashX Meta"
             ReferencedContainer = "container:ClashX.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -90,7 +90,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "49CF3B1C20CD7463001EBF94"
             BuildableName = "ClashX.app"
-            BlueprintName = "ClashX"
+            BlueprintName = "ClashX Meta"
             ReferencedContainer = "container:ClashX.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
