--- a/ClashX.xcodeproj/xcshareddata/xcschemes/ClashX.xcscheme
+++ b/ClashX.xcodeproj/xcshareddata/xcschemes/ClashX.xcscheme
@@ -15,7 +15,7 @@
                   <BuildableReference
                      BuildableIdentifier = "primary"
                      BlueprintIdentifier = "49CF3B1C20CD7463001EBF94"
-                     BuildableName = "ClashX.app"
+                     BuildableName = "ClashX Meta.app"
                      BlueprintName = "ClashX Meta"
                      ReferencedContainer = "container:ClashX.xcodeproj">
                   </BuildableReference>
@@ -33,7 +33,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "49CF3B1C20CD7463001EBF94"
-               BuildableName = "ClashX.app"
+               BuildableName = "ClashX Meta.app"
                BlueprintName = "ClashX Meta"
                ReferencedContainer = "container:ClashX.xcodeproj">
             </BuildableReference>
@@ -49,7 +49,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "49CF3B1C20CD7463001EBF94"
-            BuildableName = "ClashX.app"
+            BuildableName = "ClashX Meta.app"
             BlueprintName = "ClashX Meta"
             ReferencedContainer = "container:ClashX.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "49CF3B1C20CD7463001EBF94"
-            BuildableName = "ClashX.app"
+            BuildableName = "ClashX Meta.app"
             BlueprintName = "ClashX Meta"
             ReferencedContainer = "container:ClashX.xcodeproj">
          </BuildableReference>
@@ -89,7 +89,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "49CF3B1C20CD7463001EBF94"
-            BuildableName = "ClashX.app"
+            BuildableName = "ClashX Meta.app"
             BlueprintName = "ClashX Meta"
             ReferencedContainer = "container:ClashX.xcodeproj">
          </BuildableReference>
