--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,9 @@ jobs:
     runs-on: macos-12
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+
     - name: setup Go
       uses: actions/setup-go@v2
       with:
@@ -25,10 +28,12 @@ jobs:
       run: |
         bash install_dependency.sh
 
+    - name: build infos
+      run: |
+        python3 ClashX/add_build_info.py
+
     - name: build
       run: |
-        git rev-list --count origin/master..meta
-        python3 ClashX/add_build_info.py
         xcodebuild archive -workspace ClashX.xcworkspace -scheme ClashX -archivePath archive/ClashX.xcarchive -showBuildTimingSummary -allowProvisioningUpdates
 
     - name: create zip
