--- a/ClashX/Resources/sampleConfig.yaml
+++ b/ClashX/Resources/sampleConfig.yaml
@@ -2,9 +2,11 @@
 ## 配置文件需要放置在 $HOME/.config/clash/*.yaml
 
 ## 这份文件是clashX的基础配置文件，请尽量新建配置文件进行修改。
-## ！！！只有这份文件的端口设置会随ClashX启动生效
 
-## 如果您不知道如何操作，请参阅 官方Github文档 https://github.com/Dreamacro/clash/blob/dev/README.md
+## 如果您不知道如何操作，请参阅
+## Clash Meta wiki  https://docs.metacubex.one
+## Clash Meta Github文档  https://github.com/MetaCubeX/Clash.Meta/blob/Alpha/README.md
+    
 #---------------------------------------------------#
 
 # (HTTP and SOCKS5 in one port)
@@ -14,10 +16,17 @@ external-controller: 127.0.0.1:9090
 allow-lan: false
 mode: rule
 log-level: warning
+ipv6: false
+
 
 proxies:
 
 proxy-groups:
+
+proxy-providers:
+
+rule-providers:
+
 
 rules:
   - DOMAIN-SUFFIX,google.com,DIRECT
