Gzip core file.

--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,5 @@ ClashX/Resources/Country.mmdb.gz
 ClashX/Resources/geoip.dat.gz
 ClashX/Resources/geosite.dat.gz
 .bundle/config
-ClashX/Resources/com.metacubex.ClashX.ProxyConfigHelper.meta
+ClashX/Resources/com.metacubex.ClashX.ProxyConfigHelper.*
 clash.meta
