--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,15 @@ jobs:
       with:
         go-version: 1.19.x
     
+    - name: download meta core
+      uses: dsaltares/fetch-gh-release-asset@master
+      with:
+        repo: 'MetaCubeX/Clash.Meta'
+        regex: true
+        file: "darwin.*\\.gz"
+        target: 'clash.meta/'
+        token: ${{ secrets.GITHUB_TOKEN }}
+
     - name: install deps
       run: bash install_dependency.sh
 
