--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,12 +27,12 @@ jobs:
         go-version: 1.19.x
     
     - name: download meta core
-      uses: dsaltares/fetch-gh-release-asset@master
+      uses: robinraju/release-downloader@v1.5
       with:
-        repo: 'MetaCubeX/Clash.Meta'
-        regex: true
-        file: "darwin.*\\.gz"
-        target: 'clash.meta/'
+        repository: 'MetaCubeX/Clash.Meta'
+        latest: true
+        fileName: "darwin.*.gz"
+        out-file-path: "clash.meta"
         token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: install deps
