--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,6 @@ jobs:
 
     - name: test
       run: git rev-list --count origin/master..origin/meta
-
-    - name: setup Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.19.x
     
     - name: download meta core
       uses: robinraju/release-downloader@v1.5
@@ -47,7 +42,7 @@ jobs:
     - name: create zip
       run: ditto -c -k --sequesterRsrc --keepParent archive/ClashX.xcarchive/Products/Applications/ClashX\ Meta.app ClashX\ Meta.zip
 
-    - name: Upload Artifact
+    - name: upload Artifact
       uses: actions/upload-artifact@v3
       if: "!startsWith(github.ref, 'refs/tags/')"
       with:
