misc: add meta wiki

--- a/ClashX/Resources/sampleConfig.yaml
+++ b/ClashX/Resources/sampleConfig.yaml
@@ -5,6 +5,7 @@
 
 ## 如果您不知道如何操作，请参阅
 ## Clash Meta wiki  https://docs.metacubex.one
+## Clash Meta wiki  https://clash-meta.wiki
 ## Clash Meta Github文档  https://github.com/MetaCubeX/Clash.Meta/blob/Alpha/README.md
     
 #---------------------------------------------------#
