--- a/ClashX SwiftUI.xcodeproj/xcshareddata/xcschemes/ClashX Meta.xcscheme
+++ b/ClashX SwiftUI.xcodeproj/xcshareddata/xcschemes/ClashX Meta.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "49CF3B1C20CD7463001EBF94"
                BuildableName = "ClashX Meta.app"
                BlueprintName = "ClashX Meta"
-               ReferencedContainer = "container:ClashX.xcodeproj">
+               ReferencedContainer = "container:ClashX SwiftUI.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -27,15 +27,6 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "49CF3B1C20CD7463001EBF94"
-            BuildableName = "ClashX Meta.app"
-            BlueprintName = "ClashX Meta"
-            ReferencedContainer = "container:ClashX.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <Testables>
       </Testables>
    </TestAction>
@@ -56,7 +47,7 @@
             BlueprintIdentifier = "49CF3B1C20CD7463001EBF94"
             BuildableName = "ClashX Meta.app"
             BlueprintName = "ClashX Meta"
-            ReferencedContainer = "container:ClashX.xcodeproj">
+            ReferencedContainer = "container:ClashX SwiftUI.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -73,7 +64,7 @@
             BlueprintIdentifier = "49CF3B1C20CD7463001EBF94"
             BuildableName = "ClashX Meta.app"
             BlueprintName = "ClashX Meta"
-            ReferencedContainer = "container:ClashX.xcodeproj">
+            ReferencedContainer = "container:ClashX SwiftUI.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
