--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
     - name: create zip
       run: |
         ditto -c -k --sequesterRsrc --keepParent archive/ClashX.xcarchive/Products/Applications/ClashX\ Meta.app ClashX\ Meta.zip
-        ditto -c -k --sequesterRsrc --keepParent archive/ClashX\ SwiftUI.xcarchive/Products/Applications/ClashX\ Meta.app ClashX\ Meta\ SwiftUI.zip
+        ditto -c -k --sequesterRsrc --keepParent archive/ClashX\ SwiftUI.xcarchive/Products/Applications/ClashX\ Meta.app ClashX\ Meta\ SwiftUI(macOS 12.0+).zip
 
     - name: upload Artifact
       uses: actions/upload-artifact@v3
@@ -70,5 +70,5 @@ jobs:
         generate_release_notes: true
         files: |
           "ClashX Meta.zip"
-          "ClashX Meta SwiftUI.zip"
+          "ClashX Meta SwiftUI(macOS 12.0+).zip"
 
