--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,9 +65,12 @@ jobs:
 
 
     - name: create zip
-      run: |
-        ditto -c -k --sequesterRsrc --keepParent archive/ClashX.xcarchive/Products/Applications/ClashX\ Meta.app "ClashX Meta.zip"
-        ditto -c -k --sequesterRsrc --keepParent archive/ClashX\ SwiftUI.xcarchive/Products/Applications/ClashX\ Meta.app "ClashX Meta SwiftUI macOS 12.0+.zip"
+      if: startsWith(github.ref, 'refs/tags/')
+      run: ditto -c -k --sequesterRsrc --keepParent archive/ClashX.xcarchive/Products/Applications/ClashX\ Meta.app "ClashX Meta.zip"
+
+    - name: create SwiftUI zip
+      run: ditto -c -k --sequesterRsrc --keepParent archive/ClashX\ SwiftUI.xcarchive/Products/Applications/ClashX\ Meta.app "ClashX Meta SwiftUI macOS 12.0+.zip"
+        
 
     - name: upload Artifact
       uses: actions/upload-artifact@v3
