--- a/ClashX/Resources/sampleConfig.yaml
+++ b/ClashX/Resources/sampleConfig.yaml
@@ -1,5 +1,5 @@
 #---------------------------------------------------#
-## 配置文件需要放置在 $HOME/.config/ClashMeta/*.yaml
+## 配置文件需要放置在 $HOME/.config/clash.meta/*.yaml
 
 ## 这份文件是clashX的基础配置文件，请尽量新建配置文件进行修改。
 
