--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,10 @@ jobs:
 
     - name: build
       if: startsWith(github.ref, 'refs/tags/')
-      run: xcodebuild archive -workspace ClashX.xcworkspace -scheme ClashX -archivePath archive/ClashX.xcarchive -showBuildTimingSummary -allowProvisioningUpdates
+      run: |
+        xcodebuild -resolvePackageDependencies -project ClashX.xcodeproj
+        xcodebuild archive -project ClashX.xcodeproj -scheme ClashX\ Meta -archivePath archive/ClashX.xcarchive -showBuildTimingSummary -allowProvisioningUpdates
+
 
     - name: build-SwiftUI
       run: |
@@ -69,7 +72,7 @@ jobs:
       run: ditto -c -k --sequesterRsrc --keepParent archive/ClashX.xcarchive/Products/Applications/ClashX\ Meta.app "ClashX Meta.zip"
 
     - name: create SwiftUI zip
-      run: ditto -c -k --sequesterRsrc --keepParent archive/ClashX\ SwiftUI.xcarchive/Products/Applications/ClashX\ Meta.app "ClashX Meta SwiftUI macOS 12.0+.zip"
+      run: ditto -c -k --sequesterRsrc --keepParent archive/ClashX\ SwiftUI.xcarchive/Products/Applications/ClashX\ Meta.app "ClashX Meta macOS 12.0+.zip"
         
 
     - name: upload Artifact
@@ -88,5 +91,5 @@ jobs:
         generate_release_notes: true
         files: |
           ClashX Meta.zip
-          ClashX Meta SwiftUI macOS 12.0+.zip
+          ClashX Meta macOS 12.0+.zip
 
