--- a/ClashX SwiftUI.xcodeproj/xcshareddata/xcschemes/com.metacubex.ClashX.ProxyConfigHelper.xcscheme
+++ b/ClashX SwiftUI.xcodeproj/xcshareddata/xcschemes/com.metacubex.ClashX.ProxyConfigHelper.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1430"
+   LastUpgradeVersion = "1420"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "49CF3B1C20CD7463001EBF94"
-               BuildableName = "ClashX Meta.app"
-               BlueprintName = "ClashX Meta"
-               ReferencedContainer = "container:ClashX.xcodeproj">
+               BlueprintIdentifier = "F9A7C0682306E874007163C7"
+               BuildableName = "com.metacubex.ClashX.ProxyConfigHelper"
+               BlueprintName = "com.metacubex.ClashX.ProxyConfigHelper"
+               ReferencedContainer = "container:ClashX SwiftUI.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -27,15 +27,6 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "49CF3B1C20CD7463001EBF94"
-            BuildableName = "ClashX Meta.app"
-            BlueprintName = "ClashX Meta"
-            ReferencedContainer = "container:ClashX.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <Testables>
       </Testables>
    </TestAction>
@@ -48,15 +39,16 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES">
+      allowLocationSimulation = "YES"
+      viewDebuggingEnabled = "No">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "49CF3B1C20CD7463001EBF94"
-            BuildableName = "ClashX Meta.app"
-            BlueprintName = "ClashX Meta"
-            ReferencedContainer = "container:ClashX.xcodeproj">
+            BlueprintIdentifier = "F9A7C0682306E874007163C7"
+            BuildableName = "com.metacubex.ClashX.ProxyConfigHelper"
+            BlueprintName = "com.metacubex.ClashX.ProxyConfigHelper"
+            ReferencedContainer = "container:ClashX SwiftUI.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -70,10 +62,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "49CF3B1C20CD7463001EBF94"
-            BuildableName = "ClashX Meta.app"
-            BlueprintName = "ClashX Meta"
-            ReferencedContainer = "container:ClashX.xcodeproj">
+            BlueprintIdentifier = "F9A7C0682306E874007163C7"
+            BuildableName = "com.metacubex.ClashX.ProxyConfigHelper"
+            BlueprintName = "com.metacubex.ClashX.ProxyConfigHelper"
+            ReferencedContainer = "container:ClashX SwiftUI.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
